@@ -186,10 +186,7 @@ public class SyncConnection implements IProtocolListener, ITransportListener, IS
             }
         }
         if (!keepConnection) {
-            if (_heartbeatMonitor != null) {
-                _heartbeatMonitor.stop();
-                _heartbeatMonitor = null;
-            }
+            stopHeartbeatMonitor();
         }
         synchronized (TRANSPORT_REFERENCE_LOCK) {
 
@@ -208,6 +205,12 @@ public class SyncConnection implements IProtocolListener, ITransportListener, IS
                 }
                 _transport = null;
             }
+        }
+    }
+
+    public void stopHeartbeatMonitor() {
+        if (_heartbeatMonitor != null) {
+            _heartbeatMonitor.stop();
         }
     }
 
@@ -374,6 +377,8 @@ public class SyncConnection implements IProtocolListener, ITransportListener, IS
     private void initialiseSession() {
         if (_heartbeatMonitor != null) {
             _heartbeatMonitor.start();
+        }else {
+
         }
         startProtocolSession();
     }
